--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-OPENAI_EMAIL="YOUR_EMAIL"
-OPENAI_PASSWORD="YOUR_PASSWORD"
-TELEGRAM_TOKEN="YOUR_TELEGRAM_TOKEN"
+OPENAI_EMAIL="nekodaisuke.id@gmail.com"
+OPENAI_PASSWORD="Neko2112"
+TELEGRAM_TOKEN="6026034931:AAEMAEwqSsIDvAWSHUQtDaJLUCBgPj4PEVk"
